# darkskyspots-pipeline

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  regions.yaml  requirements.txt  run.py  spec-technique.md
.github/workflows/: commit-convention.yml  release.yml
data/: .gitignore
src/: alr.py  cli.py  config.py  convert.py  coverage.py  enrich.py  extract.py  publish.py  regions.py  tile_export.py  tile_id.py  utils.py  validation.py
tests/: conftest.py  test_imports.py  test_scaffolding.py
tests/integration/: test_smoke.py  test_validation.py
tests/unit/: test_alr.py  test_cli.py  test_config.py  test_convert.py  test_coverage.py  test_enrich.py  test_extract.py  test_publish.py  test_regions.py  test_run.py  test_tile_export.py  test_tile_id.py  test_utils.py  test_validation.py
validation/: checkpoints.json
